src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Account_Setup_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Setup Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Funding_Date__c</fullName>
        <label>Actual Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Document_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Document Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Funding_Amount__c</fullName>
        <label>Expected Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Funding_Date__c</fullName>
        <label>Expected Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Method__c</fullName>
        <label>Funding Method</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Legal_Name__c</fullName>
        <label>Plan Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Transition Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalize and Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Back_Office_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Back Office Queue</label>
        <queue>Back_Office_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Onboarding_Specialist_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Onboarding Specialist Queue</label>
        <queue>Onboarding_Specialist_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>